# casefile

./: .coderabbit.yaml  .gitignore  .mcp.json  .mcp.json.example  .mcp.json.template  CLAUDE.md  LICENSE  README.md  mkdocs.yml  prd.json  pyproject.toml  ralph.sh  setup-sift.sh
.claude/: settings.json
.github/workflows/: ci.yml
data/: attack_v15.json
detections/sigma/: antiforensics_wevtutil_sdelete.yml  fake_service_remote_endpoint.yml  ntlm_beacon_to_internal_ip.yml  procdump_lsass_credential_dump.yml  process_name_path_mismatch.yml
docs/: accuracy_report.md  dataset.md  getting-started.md  guardrails.md  index.md  security.md  user-guide.md
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  (+15 more)
reports/: CRIMSON_OSPREY_findings.md  accuracy_report_SRL2018.json  claim_accuracy_report.json  ground_truth_CRIMSON_OSPREY.json  protocol_sift_baseline.json
scripts/: deploy_rag_and_tokens.py  extract_failed_tasks.py  generate_dataset_doc.py  generate_html_report.py  generate_report.py  grounding_correction_prompt.py  grounding_recheck.py  grounding_verify.py  ingest.sh  monster_check.py  parse_token_usage.py  propagate_iocs.py  read_max_iter.py  review.sh  sigma_validate.py  smoke_test_memory.py
tests/: conftest.py  test_accuracy.py  test_amcache.py  test_correlation.py  test_event_logs.py  test_export_findings.py  test_findings.py  test_forensic_rag.py  test_grounding.py  test_grounding_scripts.py  test_hayabusa.py  test_memory.py  test_mft.py  test_parse_token_usage.py  test_prefetch.py  test_registry.py  test_settings.py  test_shellbags.py
(+4 files in other folders)
