[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "casefile"
version = "0.1.0"
description = "Custom MCP Server wrapping SIFT forensic tools — SANS Find Evil! Hackathon"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
casefile = "mcp_server.server:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
